2004-10-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.10 release
	section.

2004-09-29  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove atomix, author stated clearly in
	  website that no future version will be released.

2004-09-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the epiphany-extensions branch.

2004-09-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo and
	libbonoboui have been branched.

2004-09-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gparted to extras.

2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Fix epiphany-extensions pot name.

2004-09-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2004-09-17  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gnome-media has been branched.

2004-09-17  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Use "gdm.pot" for gnome-2.6 GDM as well.

2004-09-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-applets has been branched.

2004-09-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: setup-tools-backends has been branched
	aswell.

2004-09-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-themes and
	gnome-system-tools have been branched.

2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-icon-theme, evolution-webcal, and
	gnome-volume-manager have been branched.

2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: epiphany has been branched.

2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-games has been branched.

2004-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: zenity has been branched.

2004-09-12  Abel Cheung  <maddog@linuxhall.org>
