@@ -184,6 +184,17 @@
       </component>
     </version>
   </module>
+  <module name="contact-lookup-applet">
+    <version release="gnome-2.10">
+      <component name="contact-lookup-applet" dir="contact-lookup-applet" group="extras">
+       <podir dir="po"/>
+       <potname name="contact-lookup-applet.pot"/>
+       <branch name="HEAD"/>
+       <regenerate/>
+       <download/>
+      </component>
+    </version>
+  </module>
   <module name="criawips">
     <version release="gnome-2.10">
       <component name="criawips" dir="criawips" group="extras">
