@@ -1,3 +1,7 @@
+2004-10-05  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added contact-lookup-applet to extras.
+
 2004-10-01  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Tried to add a gnome-2.10 release
